--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -32,22 +32,21 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`[]🤦‍♂️ 自动选择新加坡和日本`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`[]😄新加坡和日本节点`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🤦‍♂️ 自动选择新加坡和日本`url-test`[]新加坡和日本节点`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]家宽节点`[]DIRECT`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=😘 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`[]家宽节点`[]DIRECT`[]🤦‍♂️ 自动选择新加坡和日本`.*
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
+custom_proxy_group=😘 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`[]家宽节点`[]DIRECT`[]😄新加坡和日本节点`.*
 custom_proxy_group=🍎 苹果服务`select`🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]新加坡和日本节点`.*
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]😄新加坡和日本节点`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=家宽节点`url-test`(住宅)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=新加坡和日本节点`url-test`(新加坡|日本)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=😄新加坡和日本节点`url-test`(新加坡|日本)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
