--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -35,7 +35,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`[]😄新加坡和日本节点`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]家宽节点`[]DIRECT`.*
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🐄家宽节点`[]DIRECT`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=😘 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`[]🐄家宽节点`[]DIRECT`[]😄新加坡和日本节点`.*
