--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -47,7 +47,7 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🐄家宽节点`url-test`(住宅)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=😄新加坡和日本节点`url-test`(新加坡|日本)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🙄香港普通`url-test`(香港 HK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🙄香港普通`url-test`(香港 HK1|香港 HK2|香港 HK3|香港 HK4)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
