--- a/proxy.ini
+++ b/proxy.ini
@@ -1,1 +1,8 @@
 DOMAIN-SUFFIX,hdhive.com
+DOMAIN-SUFFIX,immortalwrt.org
+DOMAIN-SUFFIX,mushroomtrack.com
+DOMAIN-SUFFIX,jable.tv
+DOMAIN-SUFFIX,stadiamaps.com
+DOMAIN-SUFFIX,openstreetmap.org
+DOMAIN-SUFFIX,ping0.cc
+DOMAIN-SUFFIX,mypikpak.com
