--- a/proxy.ini
+++ b/proxy.ini
@@ -6,3 +6,4 @@ DOMAIN-SUFFIX,stadiamaps.com
 DOMAIN-SUFFIX,openstreetmap.org
 DOMAIN-SUFFIX,ping0.cc
 DOMAIN-SUFFIX,mypikpak.com
+DOMAIN-SUFFIX,ipleak.net
