--- a/proxy.ini
+++ b/proxy.ini
@@ -7,3 +7,4 @@ DOMAIN-SUFFIX,openstreetmap.org
 DOMAIN-SUFFIX,ping0.cc
 DOMAIN-SUFFIX,mypikpak.com
 DOMAIN-SUFFIX,ipleak.net
+DOMAIN-SUFFIX,pt.btschool.club
