--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -22,7 +22,7 @@ ruleset=💬 Ai平台,https://github.com/blackmatrix7/ios_rule_script/raw/refs/h
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/asphyxia1q/homeproxy/refs/heads/main/gwproxy.ini
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/steam.yaml
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/paypal.yaml
-ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/microsoft.yaml
+ruleset=Ⓜ️ 微软服务,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/microsoft.yaml
 ;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/LM-Firefly/Rules/refs/heads/master/Adblock/Adblock.list
 ;ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
