--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -19,6 +19,7 @@ ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=💬 Ai平台,https://github.com/blackmatrix7/ios_rule_script/raw/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/asphyxia1q/homeproxy/refs/heads/main/gwproxy.ini
+ruleset=🍜非香港,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/tiktok%40!cn.list
 ruleset=Ⓜ️ 微软服务,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/bing.yaml
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/steam.yaml
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/paypal.yaml
