--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -27,8 +27,8 @@ ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCu
 ;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/LM-Firefly/Rules/refs/heads/master/Adblock/Adblock.list
 ;ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=📢 谷歌FCM,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/classical/google.yaml
-ruleset=📢 谷歌FCM,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/google.yaml
+ruleset=😘 谷歌,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/classical/google.yaml
+ruleset=😘 谷歌,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/google.yaml
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=Ⓜ️ 微软服务,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/microsoft.yaml
@@ -39,7 +39,7 @@ ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ;ruleset=📲 电报信息,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Telegram/Telegram.list
 ruleset=📲 电报信息,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/telegram.yaml
 ruleset=📲 电报信息,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/classical/telegram.yaml
-ruleset=😘 谷歌,https://github.com/blackmatrix7/ios_rule_script/raw/refs/heads/master/rule/Clash/Google/Google.yaml
+;ruleset=😘 谷歌,https://github.com/blackmatrix7/ios_rule_script/raw/refs/heads/master/rule/Clash/Google/Google.yaml
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🚀 节点选择:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/geolocation-!cn.list
@@ -60,7 +60,7 @@ custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=😘 谷歌`select`[]🚀 节点选择`[]♻️ 自动选择`[]🐄家宽节点`[]DIRECT`[]😄新加坡和日本节点`.*
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=📢 谷歌FCM`select`[]😄新加坡和日本节点`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
