--- a/gwproxy.ini
+++ b/gwproxy.ini
@@ -8,3 +8,5 @@ DOMAIN-SUFFIX,ping0.cc
 DOMAIN-SUFFIX,mypikpak.com
 DOMAIN-SUFFIX,ipleak.net
 DOMAIN-SUFFIX,pt.btschool.club
+DOMAIN-SUFFIX,broadcom.com
+DOMAIN-SUFFIX,btschool.club
