--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -23,6 +23,7 @@ ruleset=🍜非香港,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat
 ruleset=Ⓜ️ 微软服务,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/bing.yaml
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/steam.yaml
 ruleset=🚀 节点选择,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/paypal.yaml
+ruleset=🍅netflix,clash-classic:https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/classical/netflix.yaml
 ;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/LM-Firefly/Rules/refs/heads/master/Adblock/Adblock.list
 ;ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
@@ -69,6 +70,7 @@ custom_proxy_group=🐄家宽节点`url-test`(住宅)`http://www.gstatic.com/gen
 custom_proxy_group=😄新加坡和日本节点`url-test`(新加坡|日本)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🙄香港普通`url-test`(香港 HK1|香港 HK2|香港 HK3|香港 HK4)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🍜非香港`url-test`(美国|日本|新加坡|哈哈二次)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍅netflix`url-test`(美国|日本|新加坡|哈哈二次)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
 
