--- a/gwproxy.ini
+++ b/gwproxy.ini
@@ -10,3 +10,4 @@ DOMAIN-SUFFIX,ipleak.net
 DOMAIN-SUFFIX,pt.btschool.club
 DOMAIN-SUFFIX,broadcom.com
 DOMAIN-SUFFIX,btschool.club
+DOMAIN-SUFFIX,fast.com
